Upgrade to Angular 8

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "ngx-kjua",
-  "description": "Angular QR-Code generator component.",
-  "version": "1.6.0",
+  "name": "@codingtub/ngx-kjua",
+  "description": "Angular QR-Code generator component. Forked from https://github.com/werthdavid/ngx-kjua.",
+  "version": "1.7.0",
   "license": "MIT",
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -16,9 +17,13 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/werthdavid/ngx-kjua"
+    "url": "https://github.com/codingtub/ngx-kjua"
   },
   "authors": [
+    {
+      "name": "Michael Rieger",
+      "email": "mr@codingtub.eu"
+    },
     {
       "name": "David Werth",
       "email": "werth.david@gmail.com"
@@ -32,7 +37,7 @@
     "svg"
   ],
   "bugs": {
-    "url": "https://github.com/werthdavid/ngx-kjua/issues"
+    "url": "https://github.com/codingtub/ngx-kjua/issues"
   },
   "dependencies": {
     "kjua-svg": "^1.9.1"
@@ -42,23 +47,23 @@
     "@angular/core": ">= 2.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "~7.2.3",
-    "@angular/common": "^7.2.2",
-    "@angular/compiler": "^7.2.2",
-    "@angular/compiler-cli": "^7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/forms": "^7.2.2",
-    "@angular/language-service": "^7.2.2",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
-    "@types/node": "~10.12.18",
-    "core-js": "^2.6.3",
-    "ng-packagr": "^5.3.0",
-    "rxjs": "~6.3.3",
-    "ts-node": "~8.0.1",
-    "tslint": "~5.12.1",
-    "typescript": "~3.2.4",
-    "zone.js": "~0.8.29"
+    "@angular-devkit/build-angular": "^0.803.20",
+    "@angular/cli": "~8.3.20",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@types/node": "~12.12.14",
+    "core-js": "^3.4.7",
+    "ng-packagr": "^5.7.1",
+    "rxjs": "~6.5.3",
+    "ts-node": "~8.5.4",
+    "tslint": "~5.20.1",
+    "typescript": "~3.5.3",
+    "zone.js": "~0.9.1"
   }
 }
